Updated input styling to prevent overflow

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ main {
     font-size: 24px;
     border: none;
     padding: 0;
+    max-width: calc(100% - 24px);
 }
 
 #location::placeholder {
